syntax = "proto3";
option go_package = "go-base/proto";

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}

service Hello {
  rpc SayHello(HelloRequest) returns (HelloResponse) {}
}